--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 ### Site Settings ###
-title               : Beite
+title               : Beite/Product Manager 
 description         : >-
-                      Hello, I’m Beite Zhu. A product manager and marketing professional with 7 years of experience in the tech industry. I have successfully designed and launched app and SaaS products. Expertise in Product Management, Market Survey, and Marketing Strategy (including Growth Marketing and Product Marketing) for both B2B and B2C products.
+                      Hello :wave:, I’m Beite Zhu. 
+                      <br>A product manager and marketing professional with 7 years of experience in the tech industry. I have successfully designed and launched app and SaaS products. 
+                      <br>Expertise in Product Management, Market Survey, and Marketing Strategy.
 baseurl             : "/myportfolio"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : beitezhu/beitezhu.github.io    # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
@@ -24,11 +26,11 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Beite Zhu
-  image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : assets/image/beite_profile_pic.jpeg
   email             : zhubeite@gmail.com
-  github            : your_username
+  github            : beitezhu
 # kaggle            : your_username
-  linkedin          : beitezhu
+  linkedin          : beite-zhu
 
 
 
