--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,27 +1,42 @@
-- title: Product Manager, Synology
+- title: <h4>Product Manager, Synology</h4>
   from: Apr 2020
   to: Jun 2023
   description: <h5>Product Strategy</h5>
                <ul>
-    <li>
-        <p>Identified router software pain points to create roadmap & increase router product line revenue 29% YoY (US$3.2m); Added network separation to solve user cybersecurity concerns.</p>
-    </li>
-    <li>
-        <p>Designed/launched 2FA & password-free login methods of Synology cloud security/authentication service (Synology Account, over 5m users); Increased daily Two-factor authentication (2FA) & password-free login setup rate 230% MoM;</p>
-    </li>
-    <li>
-        <p>Decreased support tickets 80%, saving tech support engineer time & preventing potential data leaks.</p>
-    </li>
-    <li>
-        <p>Designed & delivered piracy-prevention system; Prevented action from 20k pirate users in China within 1 year.</p>
-    </li>
-    </ul>
+       <li>Identified router software pain points to create roadmap & increase router product line revenue 29% YoY (US$3.2m); Added network separation to solve user cybersecurity concerns.</li>
+       <li>Designed/launched 2FA & password-free login methods of Synology cloud security/authentication service (Synology Account, over 5m users); Increased daily Two-factor authentication (2FA) & password-free login setup rate 230% MoM;</li>
+       <li> Decreased support tickets 80%, saving tech support engineer time & preventing potential data leaks.</li>
+       <li>Designed & delivered piracy-prevention system; Prevented action from 20k pirate users in China within 1 year.</li>
+     </ul>
+       <h5>Project Management</h5>
+     <ul>
+       <li>Worked with up to 14 members (9 functional teams) to design, develop & launch mobile app/router operations system; Redesigned app, increasing app score from 3.0-4.8/5 stars in app store within 3 months.</li>
+       <li>Led integration of Synology online services to Synology Account across 5 RD teams & 3 BUs; Integrated cloud service settings into 1 portal, increasing login speed 66%.</li>
+     </ul>
+       <h5>User Analysis</h5>
+     <ul>
+       <li>Interviewed 13 users (from pool of 1k users) to optimize UX process; Reduced router setup steps 50% & sped up router setup time 66%; decreased setup failure-based returns through Amazon 30% YoY.</li>
+       <li>Initiated router app market insight report, sharing feedback from 2k users with division & router teams (50 members).</li>
+     </ul>
+       <h5>Product Marketing</h5>
+     <ul>
+        <li>Implemented the go-to-market strategy for C2 Storage (a SaaS product), led website redesign, resulting in a 25% sales growth within 3 months.</li>
+        <li>Oversaw the creation of router user guide/help documents, translated terms into user-friendly language. 70% of users found the articles helpful, a 10% increase over the average.</li>
+     </ul>
 
-- title: Software Engineer, Google, UK
-  from: 2018
-  to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+
+
+
+- title: <h5>Senior Marketing Specialist, Synology</h5>
+  from: Oct,2017
+  to: Apr,2020
+  description: <ul>
+    <li>Led a 3-member team in supporting 4 sales reps to achieve 51.5% revenue growth over 2 years(US$4.9b value growth); </li>
+    <li>Used LinkedIn/email to gain +150% new customers YoY; </li>
+    <li>Delivered 9+ digital marketing campaigns, 20+ emails with average 20% open rate and 2.1% click rate.</li>
+    <li>Built go-to market strategies in 6 countries; Included advertising, online campaigns, lead-generation, KOL events, press conferences, seminars & annual business user events; Managed relationships with 35 ASEAN media sources and 6 PR agencies.</li>
+    <li>Organized online training and monitored 15 distributors' marketing performance.</li>
+    <li>Established marketing strategy for 15 distributors across SEA to follow, worked closely with Sales to achieve 30% growth in continuous 2 years.</li>
+    <li>Planned & organized 25 Synology branding events across Southeast Asia; Press conferences and Key Opinion Leader (KOL) events generated +50% media exposure YoY (270 articles, including product reviews and interviews); </li>
+    <li>Organized & presented at 12 international exhibitions/conferences (with 9 events leading to 27 successful projects)</li>
+    </ul>
