--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -28,8 +28,8 @@
 
 
 - title: <h5>Senior Marketing Specialist, Synology</h5>
-  from: Oct,2017
-  to: Apr,2020
+  from: Oct 2017
+  to: Apr 2020
   description: <ul>
     <li>Led a 3-member team in supporting 4 sales reps to achieve 51.5% revenue growth over 2 years(US$4.9b value growth); </li>
     <li>Used LinkedIn/email to gain +150% new customers YoY; </li>
