--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -27,16 +27,25 @@
 
 
 
-- title: <h5>Senior Marketing Specialist, Synology</h5>
+- title: <h4>Senior Marketing Specialist, Synology</h4>
   from: Oct 2017
   to: Apr 2020
-  description: <ul>
-    <li>Led a 3-member team in supporting 4 sales reps to achieve 51.5% revenue growth over 2 years(US$4.9b value growth); </li>
-    <li>Used LinkedIn/email to gain +150% new customers YoY; </li>
-    <li>Delivered 9+ digital marketing campaigns, 20+ emails with average 20% open rate and 2.1% click rate.</li>
-    <li>Built go-to market strategies in 6 countries; Included advertising, online campaigns, lead-generation, KOL events, press conferences, seminars & annual business user events; Managed relationships with 35 ASEAN media sources and 6 PR agencies.</li>
-    <li>Organized online training and monitored 15 distributors' marketing performance.</li>
-    <li>Established marketing strategy for 15 distributors across SEA to follow, worked closely with Sales to achieve 30% growth in continuous 2 years.</li>
-    <li>Planned & organized 25 Synology branding events across Southeast Asia; Press conferences and Key Opinion Leader (KOL) events generated +50% media exposure YoY (270 articles, including product reviews and interviews); </li>
-    <li>Organized & presented at 12 international exhibitions/conferences (with 9 events leading to 27 successful projects)</li>
+  description: <h5>Growth Marketing</h5>
+         <ul>
+       <li>Led a 3-member team in supporting 4 sales reps to achieve 51.5% revenue growth over 2 years(US$4.9b value growth); </li>
+       <li>Used LinkedIn/email to gain +150% new customers YoY; </li>
+       <li>Delivered 9+ digital marketing campaigns, 20+ emails with average 20% open rate and 2.1% click rate.</li>
+     </ul>
+  
+   <h5>Go-To Marketing Strategy</h5>
+   <ul>
+      <li>Built go-to market strategies in 6 countries; Included advertising, online campaigns, lead-generation, KOL events, press conferences, seminars & annual business user events; Managed relationships with 35 ASEAN media sources and 6 PR agencies.</li>
+      <li>Organized online training and monitored 15 distributors' marketing performance.</li>
+      <li>Established marketing strategy for 15 distributors across SEA to follow, worked closely with Sales to achieve 30% growth in continuous 2 years.</li>
+   </ul>
+   
+    <h5>Event Marketing</h5>
+    <ul>
+     <li>Planned & organized 25 Synology branding events across Southeast Asia; Press conferences and Key Opinion Leader (KOL) events generated +50% media exposure YoY (270 articles, including product reviews and interviews); </li>
+     <li>Organized & presented at 12 international exhibitions/conferences (with 9 events leading to 27 successful projects)</li>
     </ul>
