--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,13 @@
 title               : Beite/Product Manager 
 description         : >-
                       Hello :wave:, I’m Beite Zhu. 
-                      <br>I am a product manager with 7 years of experience in the tech industry. I designed and launched apps and SaaS products, specializing in Networking, Backup, and Security.
-                      <br><br>My experience has refined my skills in Product Strategy, Project Management, and Market Survey. Feel free to lurk around my portfolio to view my <a href="https://beitezhu.github.io/myportfolio/projects/">projects</a> and <a href="https://beitezhu.github.io/myportfolio/assets/pdf/Beite%20Zhu_resume_1226.pdf">resume</a>.
+                      <br>I am a Data-Driven product manager with 7 years of experience in the tech industry. 
+                       <br><br> - I designed apps and SaaS products, one of which improved its rating from 3 to 4.8 in app store.
+                       <br> - I specialize in <a href="https://beitezhu.github.io/myportfolio/projects/2-networking-product">Networking</a>, <a href="https://beitezhu.github.io/myportfolio/projects/3-backup-product">Backup</a>, and <a href="https://beitezhu.github.io/myportfolio/projects/1-cyber-security-product">Security</a>.
+                       <br> - I am proficient in <a href="https://beitezhu.github.io/myportfolio/blog/data-miningl">Python (Pandas/NumPy)</a>, SQL, HTML, Excel, and Tableau.
+                       
+
+                      <br><br>My experience has refined my skills in Product Strategy, Project Management, and Market Survey. Feel free to look around my portfolio to view my <a href="https://beitezhu.github.io/myportfolio/projects/">industry projects</a>, <a href="https://beitezhu.github.io/myportfolio/Technical/"> technical projects</a> and <a href="https://beitezhu.github.io/myportfolio/assets/pdf/Beite%20Zhu_resume_1226.pdf">resume</a>.
 
 baseurl             : "/myportfolio"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : beitezhu/beitezhu.github.io    # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
